# opennode

./: .gitignore  LICENSE  README.md  ruff.toml
.claude/: CLAUDE.md
.claude/tasks/: README.md
.claude/tasks/backlog/: 01-python-backend-core.md  02-asr-engine.md  04-websocket-server.md  06-audio-capture.md  13-settings-and-config.md  15-packaging-and-distribution.md  16-testing-and-qa.md
.claude/tasks/done/: 00-project-setup.md  03-vad-pipeline.md  05-electron-shell.md  07-overlay-window.md  08-main-window-ui.md  (+2 more)
.github/workflows/: build.yml  ci.yml
backend/: pyproject.toml
backend/opennode/: __init__.py  __main__.py  config.py  protocol.py  server.py  utils.py
backend/opennode/asr/: __init__.py  base.py  factory.py  onnx_parakeet.py  parakeet.py  whisper.py
backend/opennode/diarization/: __init__.py  alignment.py  pyannote_engine.py
backend/opennode/pipeline/: __init__.py  buffer.py  connection_manager.py  processor.py  session.py
backend/opennode/storage/: __init__.py  database.py  export.py  manager.py  models.py
backend/opennode/summarization/: __init__.py  service.py  summarizer.py
backend/opennode/vad/: __init__.py  accumulator.py  silero.py
backend/tests/: test_asr.py  test_diarization.py  test_server.py  test_storage.py  test_summarization.py  test_vad.py  test_websocket.py
electron/: electron.vite.config.ts  entitlements.mac.plist  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
electron/assets/: README.md
scripts/: dev.sh  download-models.py  setup.sh
shared/: protocol.ts
(+33 files in other folders)
