[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opennode-backend"
version = "0.1.0"
description = "OpenNode backend: real-time meeting transcription with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "numpy>=1.26",
    "soundfile>=0.12",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
gpu = [
    "nemo_toolkit[asr]",
    "torch>=2.1",
]
cpu = [
    "onnx-asr[cpu,hub]",
]
whisper = [
    "faster-whisper>=1.0",
]
diarization = [
    "pyannote.audio>=3.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "httpx>=0.27",
]

[project.scripts]
opennode-backend = "opennode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["opennode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
